src/test/deca/test_compilateur/context/invalid/created/print/print.deca
// Description :
//    test print avec un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.31) Les instances affichables peuvent être de type ‘int’, ‘float’, ‘string’

{
boolean a;
print(a);
}
